// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

message GossipListenerInput {
  string fromAddress = 1;
  string broadcastGroup = 2; // null for unicast messages
  string messageType = 3;
  bytes buffer = 4;
}

message GossipListenerOutput {
}
